# Opt_CircleSeparation

./: .gitignore  CMakeLists.txt  README.md  repulse_v1.hpp
Scripts/: manifest.txt  output.txt  output1.txt  picture.py  run.py  score.py  score.txt
Test/: Test.1  main.cpp
Test/Test/: main.cpp
app/: benchmark.cpp  main.cpp  main_template.cpp  methods.cpp  opt.cpp  state_stats.cpp  stats.cpp  test_template.cpp
docs/: ProApproaches.txt
include/: circle.hpp  circles_sep.hpp  close_up.hpp  field.hpp  greedy.hpp  greedy_opt.hpp  greedy_optimization.hpp  greedy_v2.hpp  greedy_v3.hpp  grid.hpp  hill_climb.hpp  naive_v1.hpp  placement.hpp  problem_2.hpp  reorder.hpp  rep_v3.hpp  repulse_v1.hpp  repulsion_v1.hpp  repulsion_v2.hpp  sa.hpp  sa_v2.hpp  sa_v3.hpp  score.hpp  separation.hpp  solver.hpp  state_stats.hpp  util.hpp
include/place/: tangent.hpp
include/rep/: rep_v3.hpp  rep_v4.hpp  repulsion_v1.hpp  repulsion_v2.hpp  strat.hpp
notes/: ideas.txt
others/: abundrew.cs  ainu7.cpp  murrayr.cpp
scripts/: CirclesSepVisInfeasible.java  CirclesSeparationVis.java  rank.py  run.py  score.py
solver/: main.cpp
src/: circle.cpp  grid.cpp  main.cpp  separation.cpp  solver.cpp  util.cpp
submit/: v_1.cpp  version_1.cpp
tester/: main.cpp
